<resources>
    <string name="app_name">cps251project</string>
    <string name="this_is_my_layout_project">This is my layout project</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="checkbox1">CheckBox</string>
    <string name="checkbox2">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="checkbox4">CheckBox</string>
    <string name="checkbox5">CheckBox</string>
    <string name="checkbox6">CheckBox</string>
    <string name="todo1">TODO</string>
</resources>